--- a/views/user/login.html
+++ b/views/user/login.html
@@ -58,7 +58,10 @@
                     if (res.code != 0) {
                         mui.toast(res.msg)
                     } else {
-                        var url = "/chat/index.shtml?id=" + res.data.id + "&token=" + res.data.token
+                        var url = "/chat/index.shtml?id=" + res.data.id
+                            + "&token=" + res.data.token
+                        userInfo(res.data)
+                        userId(res.data.id)
                         // localStorage.setItem('userInfo', JSON.stringify(res.data))
                         location.href = url
                         //mui.alert(url)
