--- a/views/user/register.html
+++ b/views/user/register.html
@@ -56,16 +56,18 @@
         methods: {
             login: function () {
                 //检测密码是否为空
-                console.log("login")
-                /*console.log(this.user)*/
+                console.log(this.user)
                 //网络请求
                 //封装了promis
                 util.post("/user/createUser", this.user).then(res => {
                     console.log(res)
-                       /*location.replace("//127.0.0.1/index")*/
+                    if (res.code != 0) {
+                        mui.toast(res.message)
+                    } else {
+                        //location.replace("localhost:8081")
                         location.href = "/"
                         mui.toast("注册成功,即将跳转")
-
+                    }
                 })
             },
         }
